# glia

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  rtd_requirements.txt  setup.py  test.py
.github/workflows/: black.yml  isort.yml  main.yml
docs/: requirements.txt
docs/source/: conf.py  env.rst  glia.rst  index.rst  modules.rst  package.rst  usage.rst
glia/: .gitignore  __init__.py  _cli.py  _fs.py  _glia.py  _hash.py  _local.py  _mpi.py  assets.py  cli.py  exceptions.py  glia.py  hash.py  library.py  neuron.py  resolution.py  resolve.py
glia/packaging/: __init__.py  _ast.py  _cli.py
glia/packaging/cookiecutter-glia/: cookiecutter.json
glia/packaging/cookiecutter-glia/{{cookiecutter.project_slug}}/: LICENSE  README.rst  pyproject.toml
glia/packaging/cookiecutter-glia/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
tests/: _shared.py  test_catalogues.py  test_cli.py  test_glia.py  test_glia_runnable.py  test_log.py  test_resolve.py
tests/data/mods/: AMPA__0.mod  Na__0.mod
