[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nrn-glia"
authors = [{name = "Robin De Schepper", email = "robingilbert.deschepper@unipv.it"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]

[tool.flit.module]
name = "glia"

[project.urls]
Home = "https://github.com/dbbs-lab/glia"

[project.scripts]
glia = "glia._cli:glia_cli"

[project.optional-dependencies]
parallel = [
    "mpi4py~=3.0",
]
docs = [
    "sphinx~=7.0",
    "furo~=2023.9",
    "sphinxemoji~=0.2.0",
    "sphinx_design~=0.5.0",
    "sphinx-copybutton~=0.5.0",
]
dev = [
    "pre-commit~=3.5",
    "black~=23.11",
    "isort~=5.12",
]

[tool.black]
line-length = 90

[tool.isort]
profile = "black"