[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nmodl-glia"
authors = [{name = "Robin De Schepper", email = "robingilbert.deschepper@unipv.it"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
dependencies= [
    "click~=8.0",
    "appdirs~=1.0",
    "errr~=1.2",
    "cookiecutter~=2.0",
    "black>=23.0.0",
    "toml~=0.10",
    "nmodl~=0.5;sys_platform != 'win32'"
]

[tool.flit.module]
name = "glia"

[project.urls]
Home = "https://github.com/dbbs-lab/glia"

[project.scripts]
glia = "glia._cli:glia"

[project.optional-dependencies]
parallel = [
    "mpi4py~=3.0",
]
neuron = [
    "nrn-patch>=4.0.0b2"
]
arbor = [
    "arbor>=0.6"
]
docs = [
    "sphinx~=7.0",
    "furo~=2023.9",
    "sphinxemoji~=0.2.0",
    "sphinx_design~=0.5.0",
    "sphinx-copybutton~=0.5.0",
]
dev = [
    "pre-commit~=3.5",
    "black~=23.11",
    "isort~=5.12",
]

[tool.black]
line-length = 90

[tool.isort]
profile = "black"