[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nmodl-glia"
authors = [{name = "Robin De Schepper", email = "robingilbert.deschepper@unipv.it"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
dependencies= [
    "click~=8.0",
    "appdirs~=1.0",
    "errr~=1.2",
    "cookiecutter~=2.0",
    "black~=24.0",
    "toml~=0.10",
    "nmodl~=0.5;sys_platform != 'win32'",
    "importlib_metadata~=6.5"
]

[tool.flit.module]
name = "glia"

[project.urls]
Home = "https://github.com/dbbs-lab/glia"

[project.scripts]
glia = "glia._cli:glia"

[project.optional-dependencies]
parallel = [
    "mpi4py~=3.0",
]
neuron = [
    "nrn-patch~=4.0"
]
arbor = [
    "arbor~=0.9"
]
docs = [
    "sphinx~=7.0",
    "furo~=2023.9",
    "sphinxemoji~=0.2",
    "sphinx_design~=0.5",
    "sphinx-copybutton~=0.5",
]
test = [
    "coverage~=7.0"
]
dev = [
    "nmodl-glia[test, docs]",
    "pre-commit~=3.5",
    "isort~=5.12",
]

[tool.black]
line-length = 90

[tool.isort]
profile = "black"

[tool.bumpversion]
current_version = "4.0.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = "--no-verify"

[tool.bumpversion.parts.pre_l]
values = ["dev", "a", "b", "rc", "final"]
optional_value = "final"

[[tool.bumpversion.files]]
filename = "glia/__init__.py"

[[tool.bumpversion.files]]
filename = "glia/packaging/cookiecutter-glia/cookiecutter.json"